js/src/jit-test/tests/binast/invalid/labelled-break-outside-while.dir
// |jit-test| error: label not found